compiler/tests/en/errors/each_not_iterable.salam
// EXPECT: E065
func main:
    n := 5
    each x in n:
        __ x
    end
end
